2012-01-10 John Wu <John dot Wu at ACM dot org>
	* src/*, examples/*: update copyright year to 2013
	* src/index.h: add function getSerialSize as a protected member
	function since it already exist in all the derived classes

2012-12-19 John Wu <John dot Wu at ACM dot org>
	* src/filter.h, src/filter.cpp: add a new constructor to work with
	previously saved query results (as a bitvector) in response to a
	request from Patrik Nisen

2012-12-08 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: introduce variable evt to evaluateRange and
	estimateRange to simplifying logging statements

2012-12-07 Patrik Nisen <patrik at nisen dot name>
	* src/bord.cpp: ibis::bord::cursor::fillRow used incorrect names
	for unsigned integers

2012-12-07 John Wu <John dot Wu at ACM dot org>
	* src/i*.cpp: allow getValuesArray to be used when generating new
	indexes
	* src/table.h, src/part.h: remove the default arguments from the
	versions of buildIndexes, they can be easily confused in
	ibis::bord
	* src/part.cpp: change most of getRawData to getValuesArray to
	accomodate in-memmory data partition

2012-12-06 John Wu <John dot Wu at ACM dot org>
	* src/i*.cpp: check for empty file name returned from
	indexFileName in function write
	* src/column.cpp: allow actualMinMax to make use of arrays
	returned by column::getValuesArray
	* src/index.cpp: allow getValuesArray to be used when a file name
	can not be determined

2012-11-29 John Wu <John dot Wu at ACM dot org>
	* src/ibin.h, src/irelic.h: move the two functions name construct
	to be public so that the users may directly build a binned with
	in-memory data without inheriting these classes.

2012-11-28 John Wu <John dot Wu at ACM dot org>
	* src/twister.h: add macro FASTBIT_USE_DEV_URANDOM to control the
	use of system generated seed for the random number generator
	MersenneTwister.  The use of /dev/random causes the initializer to
	block on compute node linux and other low entropy environments,